# finetuning-exploration

./: README.md  pyproject.toml
finetuning_exploration/: __init__.py  fine-tune-llama-2-for-sentiment-analysis.py
