[tool.poetry]
name = "finetuning-exploration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
transformers = "^4.42.3"
datasets = "^2.20.0"
scikit-learn = "^1.5.1"
trl = "^0.9.4"
evaluate = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
